fixed registered events spacing

--- a/packages/src/modules/CalendarPage/SavedEvents/savedEventsTab.module.scss
+++ b/packages/src/modules/CalendarPage/SavedEvents/savedEventsTab.module.scss
@@ -7,8 +7,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: 1rem;
+  gap: 2rem;
   flex-wrap: wrap;
   overflow: auto;
-  padding: 1rem;
+  padding: 2rem;
 }
